--- a/package.json
+++ b/package.json
@@ -1,24 +1,36 @@
 {
-  "name": "weather-app",
+  "name": "todo-list",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack",
+    "watch": "webpack --watch",
+    "start": "webpack serve --open"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/EricLam404/weather-app.git"
+    "url": "git+https://github.com/EricLam404/todo-list.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/EricLam404/weather-app/issues"
+    "url": "https://github.com/EricLam404/todo-list/issues"
   },
-  "homepage": "https://github.com/EricLam404/weather-app#readme",
+  "homepage": "https://github.com/EricLam404/todo-list#readme",
   "devDependencies": {
+    "css-loader": "^6.7.1",
+    "html-webpack-plugin": "^5.5.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.1"
+  },
+  "dependencies": {
+    "file-loader": "^6.2.0",
+    "lodash": "^4.17.21",
+    "url-loader": "^4.1.1"
   }
 }
